--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 Exit Stage Left - Demo/Assets/Scripts/preGameMovement.cs
 Exit Stage Left - Demo/Assets/Scripts/preGameMovement.cs.meta
+Exit Stage Left - Demo/Assets/Scripts/preGameMovement.cs
+Exit Stage Left - Demo/Assets/Scripts/preGameMovement.cs.meta
